--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CV - Kyrylo Petrishchev</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>Some text here!</body>
 </html>
