--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>CV - Kyrylo Petrishchev</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <img class="portrait" src="images/portrait.jpg" width="240" height="320" alt="That's me!">
-    <h1 class="cv-name">Kyrylo Petrishchev</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header class="header">
+    <div class="container header-container">
+      <div class="leftside">
+        <nav class="header-menu">
+          <input id="burger-toggle" type="checkbox" />
+          <label class="burger-btn" for="burger-toggle">
+            <span></span>
+          </label>
+          <ul class="menu-list">
+            <li class="menu-item"><a href="#about" class="menu-link">About</a></li>
+            <li class="menu-item"><a href="#skills" class="menu-link">Skills</a></li>
+            <li class="menu-item"><a href="#code" class="menu-link">Code</a></li>
+            <li class="menu-item"><a href="#code" class="menu-link">Projects</a></li>
+            <li class="menu-item"><a href="#code" class="menu-link">Educatuoin</a></li>
+            <li class="menu-item"><a href="#code" class="menu-link">Languages</a></li>
+          </ul>
+        </nav>
+        <div class="container title-container">
+          <p class="title-text">Web Developer</p>
+          <p class="profile-name">Kyrylo<br>Petrishchev</p>
+        </div>
+      </div>
+      <img src="assets/img/profilepic.jpg" alt="profile pic" class="profile-picture">
+    </div>
+  </header>
+</body>
+
 </html>
