--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
         <div class="container title-container">
           <p class="title-text">Web Developer</p>
-          <p class="profile-name">Kyrylo<br>Petrishchev</p>
+          <p class="profile-name"><span>Kyrylo</span><span>Petrishchev</span></p>
         </div>
       </div>
       <img src="assets/img/profilepic.jpg" alt="profile pic" class="profile-picture">
