--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <div class="leftside">
         <nav class="header-menu">
           <input id="burger-toggle" type="checkbox" />
-          <label class="burger-btn" for="burger-toggle">
-            <span></span>
-          </label>
+            <label class="burger-btn" for="burger-toggle">
+              <span></span>
+            </label>
           <ul class="menu-list">
             <li class="menu-item"><a href="#about" class="menu-link">About</a></li>
             <li class="menu-item"><a href="#skills" class="menu-link">Skills</a></li>
             <li class="menu-item"><a href="#code" class="menu-link">Code</a></li>
             <li class="menu-item"><a href="#code" class="menu-link">Projects</a></li>
-            <li class="menu-item"><a href="#code" class="menu-link">Educatuoin</a></li>
+            <li class="menu-item"><a href="#code" class="menu-link">Education</a></li>
             <li class="menu-item"><a href="#code" class="menu-link">Languages</a></li>
           </ul>
         </nav>
@@ -35,6 +35,46 @@
       <img src="assets/img/profilepic.jpg" alt="profile pic" class="profile-picture">
     </div>
   </header>
+  <main class="main">
+    <div class="container main-container">
+      <section class="section about" id="about">
+        <h2 class="section-title">About</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
+          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
+          velit?</p>
+      </section>
+      <section class="section skills" id="skills">
+        <h2 class="section-title">Skills</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
+          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
+          velit?</p>
+      </section>
+      <section class="section code" id="code">
+        <h2 class="section-title">Code Example</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
+          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
+          velit?</p>
+      </section>
+      <section class="section projects" id="projects">
+        <h2 class="section-title">Projects</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
+          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
+          velit?</p>
+      </section>
+      <section class="section education" id="education">
+        <h2 class="section-title">Education</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
+          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
+          velit?</p>
+      </section>
+      <section class="section languages" id="languages">
+        <h2 class="section-title">Languages</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
+          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
+          velit?</p>
+      </section>
+    </div>
+  </main>
 </body>
 
 </html>
