--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <div class="leftside">
         <nav class="header-menu">
           <input id="burger-toggle" type="checkbox" />
-            <label class="burger-btn" for="burger-toggle">
-              <span></span>
-            </label>
+          <label class="burger-btn" for="burger-toggle">
+            <span></span>
+          </label>
           <ul class="menu-list">
             <li class="menu-item"><a href="#about" class="menu-link">About</a></li>
             <li class="menu-item"><a href="#skills" class="menu-link">Skills</a></li>
@@ -45,15 +45,22 @@
       </section>
       <section class="section skills" id="skills">
         <h2 class="section-title">Skills</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
-          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
-          velit?</p>
+        <ul class="section-list">
+          <li>HTML/CSS basics</li>
+          <li>PHP basics</li>
+          <li>Adobe Photoshop/inDesign/After Effects</li>
+        </ul>
       </section>
       <section class="section code" id="code">
         <h2 class="section-title">Code Example</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
-          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
-          velit?</p>
+        <pre>function solution(number) {
+    let sum = 0;
+    for (let i = number-1; i > 0; i--) {
+        if ((i % 3 == 0) || (i % 5 == 0)) sum += i;
+    }
+    return sum;
+}
+          </pre>
       </section>
       <section class="section projects" id="projects">
         <h2 class="section-title">Projects</h2>
@@ -63,16 +70,25 @@
       </section>
       <section class="section education" id="education">
         <h2 class="section-title">Education</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
-          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
-          velit?</p>
+        <ul class="section-list">
+          <li>Volodymyr Dahl East Ukrainian university Master's degree: Computer Science <br> 2008-2013</li>
+          <li>RS School FE developer - since 2022</li>
+        </ul>
       </section>
       <section class="section languages" id="languages">
         <h2 class="section-title">Languages</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at pariatur ipsam labore magni quia et
-          repudiandae exercitationem ex veniam, itaque enim vitae reiciendis voluptas delectus inventore animi minus
-          velit?</p>
+        <ul class="section-list">
+          <li>Ukranian - native</li>
+          <li>Russian - native</li>
+          <li><span>English - C2</span>
+            <img src="assets/img/certificate_84.png" alt="efset 84%">
+          </li>
+        </ul>
       </section>
+      <section class="section contacts" id="contacts">
+        <h2 class="section-title">Contacts</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde enim est alias suscipit repellendus, veritatis maiores reiciendis non architecto, magnam accusamus dolorem, consequatur numquam. Reiciendis laudantium itaque harum quos enim!</p>
+        </section>
     </div>
   </main>
 </body>
