fix: html validator suggested

--- a/index.html
+++ b/index.html
@@ -3,16 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  -->
-
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <meta name="HandheldFriendly" content="true"/>
-
-  <title>Document</title>
+  <title>Kyrylo Petrishchev - Front-end developer</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/androidstudio.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
   <script>hljs.highlightAll();</script>
@@ -73,7 +66,7 @@
         <h2 class="section-title">Code Example</h2>
         <pre><code class="language-javascript">function solution(number) {
   let sum = 0;
-  for (let i = 1; i < number; i++) {
+  for (let i = 1; i &lt; number; i++) {
     if ((i % 3 == 0) || (i % 5 == 0)) sum += i;
   }
   return sum;
@@ -82,7 +75,7 @@
       <section class="section projects" id="projects">
         <h2 class="section-title">Projects</h2>
         <div>
-          <img src="assets/img/cvproject.png">
+          <img src="assets/img/cvproject.png" alt="CV Project screenshot">
           <span>
             <b>CV - CSS/HTML Project</b><br>
             This is my first project. The task was to create CV using markdown and then lay it out using html and
