fix: minor touch ups

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kyrylo Petrishchev - Front-end developer</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/androidstudio.min.css">
+  <link rel="stylesheet" href="assets/css/vs.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
   <script>hljs.highlightAll();</script>
   <link rel="stylesheet" href="style.css">
@@ -45,7 +46,9 @@
     <div class="container main-container">
       <section class="section about" id="about">
         <h2 class="section-title">About</h2>
-        <p>Hi! My name is Kirill, and I decided to change my occupation and become a front-end developer. Although I've studied Computer science, I haven't had enough hands-on practice in programming. I am certain that joining RS school will help me with this new endeavor in my life.</p>
+        <p>Hi! My name is Kirill, and I decided to change my occupation and become a front-end developer. Although I've
+          studied Computer science, I haven't had enough hands-on practice in programming. I am certain that joining RS
+          school will help me with this new endeavor in my life.</p>
       </section>
       <section class="section skills" id="skills">
         <h2 class="section-title">Skills</h2>
@@ -108,9 +111,6 @@
           <li class="contacts-telegram">
             <a href="https://t.me/ferka911" target="_blank">ferka911</a>
           </li>
-          <li class="contacts-github">
-            <a href="https://github.com/ferka123/" target="_blank">ferka123</a>
-          </li>
           <li class="contacts-location">
             Kropivnitsky, Ukraine
           </li>
@@ -119,7 +119,8 @@
     </div>
   </main>
   <footer>
-    <span>© Kyrylo Petrishchev 2022</span>
+    <a href="https://github.com/ferka123/" target="_blank" class="footer-github">My Github</a>
+    <span>© Petrishchev <br>2022</span>
     <a href="https://rs.school/js/" target="_blank" class="rsschool-logo">
     </a>
   </footer>
