fix: main title tag changed to h1

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
         <div class="container title-container">
           <p class="title-text">Web Developer</p>
-          <p class="profile-name"><span>Kyrylo</span><span>Petrishchev</span></p>
+          <h1 class="profile-name"><span>Kyrylo</span><span>Petrishchev</span></h1>
         </div>
       </div>
       <img src="assets/img/profilepic.jpg" alt="profile pic" class="profile-picture">
@@ -119,7 +119,7 @@
     </div>
   </main>
   <footer>
-    <a href="https://github.com/ferka123/" target="_blank" class="footer-github">My Github</a>
+    <a href="https://github.com/ferka123/" target="_blank" class="footer-github">Github</a>
     <span>© Petrishchev <br>2022</span>
     <a href="https://rs.school/js/" target="_blank" class="rsschool-logo">
     </a>
